--- a/style.css
+++ b/style.css
@@ -729,6 +729,10 @@ h1 {
 h4 {
     color: #333333!important;
 }
+h5{
+    font-size: 25px;
+    color:#F3976C;
+}
 
 .icons {
     margin-bottom: 14px;
