--- a/style.css
+++ b/style.css
@@ -840,7 +840,7 @@ h5{
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation1.jpg");
 }
 
 @media (max-width: 1024px) {
