--- a/style.css
+++ b/style.css
@@ -832,7 +832,7 @@ h5{
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+    background-image: url("img/lines-h2-bg.webp");
 }
 
 .bg-banniere {
