--- a/style.css
+++ b/style.css
@@ -573,7 +573,7 @@ a[data-lightbox]:hover img {
 
 #lightbox-modal .modal-dialog img {
     max-height: 90vh;
-    margin: 0 auto;
+    margin: 0 auto 0;
 }
 
 .lightbox-caption {
