--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
 }
 
 .client-text{
@@ -686,7 +686,7 @@ font-style: italic;
 color: #575757;
 }
 .client{
-font-size: 15px;
+font-size: 18px;
 color: #575757;
 }
 
@@ -715,19 +715,20 @@ font-size: 22px;
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: 20px;
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 17px;
     line-height: 1.4em;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 
 h3 {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #000000!important;
+    font-size: 20px;
+    font-weight: 400;
+    color: #333333!important;
 }
 
 .med-width-whitespace {
@@ -759,6 +760,8 @@ h5{
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: auto;
+    height: auto;
 }
 
 .portfolio-row {
@@ -772,7 +775,7 @@ h5{
 
 .black-background {
     background-color: #F3976C;
-    padding: 40px 40px 40px 40px;
+    padding: 40px;
 }
 
 .bold-link {
@@ -891,8 +894,8 @@ h5{
         position: relative;
     }
     .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        padding-left: 0;
+        padding-right: 0;
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -902,8 +905,8 @@ h5{
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
