--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ nav .caret {
 .btn-d:hover,
 .btn-d:focus {
     color: #FFF;
-    background: rgba(0, 0, 0, .3);
+    /*background: rgba(0, 0, 0, .3);*/
 }
 
 button {
